Adjust initial activation/focus Task Manager/Views TableView.

In the task manager the table no longer has initial focus. When you open
the task manager, you'll need to press tab to focus the table.

When a TableView is focused it will activate the first row if no row is already active.

BUG=702489

Review-Url: https://codereview.chromium.org/2769243002
Cr-Commit-Position: refs/heads/master@{#459825}

Former-commit-id: 2fc3ba8587526eb5e5f7455ca463b0c166b1ee95