chrome/browser/ui/views/task_manager_view.h
@@ -54,7 +54,6 @@ class TaskManagerView : public TableViewDelegate,
   bool AcceleratorPressed(const ui::Accelerator& accelerator) override;
 
   // views::DialogDelegateView:
-  views::View* GetInitiallyFocusedView() override;
   bool CanResize() const override;
   bool CanMaximize() const override;
   bool CanMinimize() const override;
